--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,20 @@
 buildscript {
     ext {
-        compose_version = '1.1.1'
+        compose_version = '1.4.1'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-serialization:1.6.10"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.8.10"
     }
 }
 
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.8.10' apply false
 //    id 'kotlin-parcelize' version '1.8.20-Beta' apply false
 //    id 'kotlinx-serialization'
 }
