--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.compose.material3:material3:1.1.0-beta02'
+    implementation project(path: ':country-domain')
 //    implementation 'androidx.compose.material3:material3-icons-extended:1.0.0-alpha02'
 //    implementation "androidx.compose.material:material-icons-extended:"
     testImplementation 'junit:junit:4.13.2'
