--- a/country-datasource/build.gradle
+++ b/country-datasource/build.gradle
@@ -15,4 +15,6 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2"
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+
+    implementation(project(":country-domain"))
 }
