adding interactors and datasource modules

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,5 @@ rootProject.name = "FlagsOfTheWorld"
 include ':app'
 include ':country-datasource'
 include ':country-domain'
+include ':core'
+include ':country-interactors'
