--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,6 @@ dependencies {
     implementation "io.insert-koin:koin-android:3.3.3"
 
     implementation (project(":country-datasource"))
+    implementation (project(":country-interactors"))
+    implementation (project(":core"))
 }
