adding ui-contrylist module

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ include ':country-datasource'
 include ':country-domain'
 include ':core'
 include ':country-interactors'
+include ':ui-countrylist'
