--- a/country-interactors/build.gradle
+++ b/country-interactors/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java-library'
     id 'org.jetbrains.kotlin.jvm'
+    id 'jacoco'
 }
 
 java {
@@ -16,4 +17,5 @@ dependencies {
     implementation(project(":country-domain"))
     implementation(project(":core"))
 
+    testImplementation 'junit:junit:4.13.2'
 }
