adding jacoco and unit test to App module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,22 @@
+// for jacoco
+buildscript {
+    repositories {
+        google()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        //Jacoco Plugin
+        classpath "org.jacoco:org.jacoco.core:0.8.7"
+    }
+}
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlinx-serialization'
 }
+
+apply from: '../buildSrc/jacoco-application.gradle'
 
 android {
     namespace 'com.alamo.flagsoftheworld'
@@ -25,6 +39,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        // for jacoco
+        debug{
+            testCoverageEnabled true
         }
     }
     compileOptions {
