--- a/buildSrc/jacoco-notused.gradle
+++ b/buildSrc/jacoco-notused.gradle
@@ -1,3 +1,6 @@
+// TODO: 2023-05-26 REMOVE THIS FILE, IT IS BEING SAVED ONLY FOR REFERENCE
+// IT IS NOT BEING USED
+
 apply plugin: 'jacoco'
 
 jacoco {
