--- a/country-interactors/build.gradle
+++ b/country-interactors/build.gradle
@@ -19,4 +19,8 @@ dependencies {
     implementation(project(":core"))
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:4.1.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.9.0-Beta'
+
 }
