--- a/country-datasource/build.gradle
+++ b/country-datasource/build.gradle
@@ -11,7 +11,7 @@ java {
 
 dependencies {
 
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    api "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2"
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
