--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.8.10' apply false
+    id 'maven-publish'
 //    id 'kotlin-parcelize' version '1.8.20-Beta' apply false
 //    id 'kotlinx-serialization'
 }
