--- a/ui-countrylist/build.gradle
+++ b/ui-countrylist/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:1.4.2"
     implementation "androidx.compose.ui:ui-tooling-preview:1.4.2"
     implementation 'androidx.compose.material3:material3:1.1.0-rc01'
+//    implementation 'androidx.compose.material:material-icons-extended-android:1.5.4'
 
     // For jetpack compose previews
     implementation "androidx.compose.ui:ui-tooling:1.4.2"
