--- a/jc-ui-components/build.gradle
+++ b/jc-ui-components/build.gradle
@@ -37,15 +37,15 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.11.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation "androidx.compose.ui:ui-tooling:1.4.2"
-    implementation "androidx.compose.ui:ui:1.4.2"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.4.2"
-    implementation 'androidx.compose.material3:material3:1.1.0-rc01'
+    implementation "androidx.compose.ui:ui-tooling:1.6.1"
+    implementation "androidx.compose.ui:ui:1.6.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.6.1"
+    implementation 'androidx.compose.material3:material3:1.2.0'
 }
