--- a/ui-countrylist/build.gradle
+++ b/ui-countrylist/build.gradle
@@ -38,22 +38,22 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.11.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation "androidx.compose.ui:ui-tooling:1.4.2"
-    implementation "androidx.compose.ui:ui:1.4.2"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.4.2"
-    implementation 'androidx.compose.material3:material3:1.1.0-rc01'
+    implementation "androidx.compose.ui:ui-tooling:1.6.1"
+    implementation "androidx.compose.ui:ui:1.6.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.6.1"
+    implementation 'androidx.compose.material3:material3:1.2.0'
 //    implementation 'androidx.compose.material:material-icons-extended-android:1.5.4'
 
     // For jetpack compose previews
-    implementation "androidx.compose.ui:ui-tooling:1.4.2"
-    implementation "androidx.compose.ui:ui:1.4.2"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.4.2"
+    implementation "androidx.compose.ui:ui-tooling:1.6.1"
+    implementation "androidx.compose.ui:ui:1.6.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.6.1"
 
     implementation(project(":country-interactors"))
     implementation(project(":country-domain"))
