adding ui-contrydetails module

--- a/settings.gradle
+++ b/settings.gradle
@@ -19,4 +19,5 @@ include ':country-domain'
 include ':core'
 include ':country-interactors'
 include ':ui-countrylist'
+include ':ui-countrydetails'
 include ':jc-ui-components'
