--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:1.6.1"
     implementation "androidx.compose.ui:ui-tooling-preview:1.6.1"
     implementation 'androidx.compose.material3:material3:1.2.0'
+    implementation 'androidx.navigation:navigation-compose:2.7.7'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -77,6 +78,7 @@ dependencies {
     implementation (project(":country-datasource"))
     implementation (project(":country-interactors"))
     implementation (project(":ui-countrylist"))
+    implementation (project(":ui-countrydetails"))
     implementation (project(":core"))
     implementation project(path: ':country-domain')
 
